--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ img {
 .rating:hover>input:checked~label:before {
     opacity: 0.4
 }
+td
+{
+    padding:0 15px;
+}
 
 @media only screen and (max-width: 600px) {
     h1 {
